WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
131740
[New Multicolumn] columnNumberForOffset isn't patched yet
https://bugs.webkit.org/show_bug.cgi?id=131740
Summary
[New Multicolumn] columnNumberForOffset isn't patched yet
Dave Hyatt
Reported
2014-04-16 10:15:23 PDT
There is code for iOS selection that passes in the "page number" to selection to try to improve selection in vertical books. This hasn't been patched for the new multi-column layout. We should take the opportunity to clean this code up at the same time, i.e., move the function to RenderView, rename it to pageNumberForOffset, and make it clear it's not necessary for generic multi-column.
Attachments
Patch
(13.15 KB, patch)
2014-04-17 11:17 PDT
,
Dave Hyatt
enrica
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2014-04-17 11:17:34 PDT
Created
attachment 229563
[details]
Patch
WebKit Commit Bot
Comment 2
2014-04-17 11:20:05 PDT
Attachment 229563
[details]
did not pass style-queue: ERROR: Source/WebCore/rendering/RenderView.cpp:38: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Enrica Casucci
Comment 3
2014-04-17 11:45:09 PDT
Comment on
attachment 229563
[details]
Patch Looks good to me.
Dave Hyatt
Comment 4
2014-04-17 11:48:49 PDT
Fix landed in
r167444
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug